--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 pwndck (0.1-1) UNRELEASED; urgency=medium
 
-  * Initial release. (Closes: #XXXXXX)
+  * Initial release. (Closes: #1118480)
 
  -- David Steele <steele@debian.org>  Mon, 20 Oct 2025 21:01:35 -0400
