--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pwndck (0.2-2) unstable; urgency=medium
+
+  * Update debhelper and Policy versions.
+
+ -- David Steele <steele@debian.org>  Sun, 26 Oct 2025 13:45:52 -0400
+
 pwndck (0.2-1) unstable; urgency=medium
 
   * Add padding.
