--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pwndck (0.2-3) unstable; urgency=medium
+
+  * Failed dput.
+
+ -- David Steele <steele@debian.org>  Sun, 26 Oct 2025 15:45:29 -0400
+
 pwndck (0.2-2) unstable; urgency=medium
 
   * Update debhelper and Policy versions.
