--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,11 @@
-pwndck (0.3-1) unstable; urgency=medium
+pwndck (0.4-1) unstable; urgency=medium
+
+  * Add testing.
+  * Clean up copyright.
+
+ -- David Steele <steele@debian.org>  Sun, 14 Dec 2025 10:50:36 -0500
+
+pwndck (0.3-1) UNRELEASED; urgency=medium
 
   * Support processing of multiple passwords.
   * Support a password input file.
