--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,12 @@
-pwndck (0.4-1) unstable; urgency=medium
+pwndck (0.5-1) unstable; urgency=medium
+
+  * Rework API for module use.
+  * Align columns in verbose mode.
+  * Add devtest.
+
+ -- David Steele <steele@debian.org>  Thu, 12 Feb 2026 14:28:47 -0500
+
+pwndck (0.4-1) UNRELEASED; urgency=medium
 
   * Add testing.
   * Clean up copyright.
@@ -19,13 +27,13 @@ pwndck (0.2-3) unstable; urgency=medium
 
  -- David Steele <steele@debian.org>  Sun, 26 Oct 2025 15:45:29 -0400
 
-pwndck (0.2-2) unstable; urgency=medium
+pwndck (0.2-2) UNRELEASED; urgency=medium
 
   * Update debhelper and Policy versions.
 
  -- David Steele <steele@debian.org>  Sun, 26 Oct 2025 13:45:52 -0400
 
-pwndck (0.2-1) unstable; urgency=medium
+pwndck (0.2-1) UNRELEASED; urgency=medium
 
   * Add padding.
   * Add a PwndCk User Agent.
