--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pwndck (0.5.1-1) unstable; urgency=medium
+
+  * Clean up documentation.
+  * Improve tests.
+
+ -- David Steele <steele@debian.org>  Sun, 22 Feb 2026 12:16:10 -0500
+
 pwndck (0.5-1) unstable; urgency=medium
 
   * Rework API for module use.
