--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-pwndck (0.5.1-2) unstable; urgency=medium
+pwndck (0.5.1-3) unstable; urgency=medium
+
+  * Reupload with source.
+
+ -- David Steele <steele@debian.org>  Sun, 22 Feb 2026 21:06:51 -0500
+
+pwndck (0.5.1-2) UNRELEASED; urgency=medium
 
   * Add requests to build depends, for testing.
 
